src/bin/parser.output
   0  $accept : %entry% $end

   1  toplevel : EOF
   2           | Command SEMI toplevel

   3  Command : IMPORT STRINGV
   4          | Term
   5          | LCID Binder
   6          | UCID TyBinder

   7  Binder : COLON Type
   8         | EQ Term

   9  Type : ArrowType
  10       | RREF AType
  11       | SSOURCE AType
  12       | SSINK AType
  13       | MUTEX UCID
  14       | RREF LT MutexFields GT AType
  15       | SSOURCE LT MutexFields GT AType
  16       | SSINK LT MutexFields GT AType
  17       | THREAD AType INTV

  18  AType : LPAREN Type RPAREN
  19        | TBOT
  20        | TTOP
  21        | USTRING
  22        | UUNIT
  23        | LT FieldTypes GT
  24        | BOOL
  25        | UCID
  26        | LCURLY FieldTypes RCURLY
  27        | UFLOAT
  28        | NAT

  29  ArrowType : AType ARROW ArrowType
  30            | AType LT MutexFields GT ARROW ArrowType
  31            | AType LSQUARE UCID RSQUARE ARROW ArrowType
  32            | AType LT MutexFields GT LSQUARE UCID RSQUARE ARROW ArrowType
  33            | AType

  34  Term : AppTerm
  35       | LAMBDA LCID COLON Type DOT Term
  36       | LAMBDA USCORE COLON Type DOT Term
  37       | AppTerm COLONEQ AppTerm
  38       | CASE Term OF Cases
  39       | LET LCID EQ Term IN Term
  40       | LET USCORE EQ Term IN Term
  41       | LETREC LCID COLON Type EQ Term IN Term
  42       | IF Term THEN Term ELSE Term
  43       | ACQUIRE Term IN Term
  44       | LAMBDA LT MutexFields GT LCID COLON Type DOT Term
  45       | LAMBDA LT MutexFields GT USCORE COLON Type DOT Term

  46  AppTerm : PathTerm
  47          | AppTerm PathTerm
  48          | REF PathTerm
  49          | BANG PathTerm
  50          | FIX PathTerm
  51          | TIMESFLOAT PathTerm PathTerm
  52          | SUCC PathTerm
  53          | PRED PathTerm
  54          | ISZERO PathTerm
  55          | WAIT PathTerm
  56          | REF LT MutexFields GT PathTerm

  57  AscribeTerm : ATerm AS Type
  58              | ATerm

  59  FieldTypes :
  60             | NEFieldTypes

  61  NEFieldTypes : FieldType
  62               | FieldType COMMA NEFieldTypes

  63  FieldType : LCID COLON Type
  64            | Type

  65  PathTerm : PathTerm DOT LCID
  66           | PathTerm DOT INTV
  67           | AscribeTerm

  68  TermSeq : Term
  69          | Term SEMI TermSeq

  70  ATerm : LPAREN TermSeq RPAREN
  71        | LCID
  72        | STRINGV
  73        | UNIT
  74        | LT LCID EQ Term GT AS Type
  75        | TRUE
  76        | FALSE
  77        | FLOATV
  78        | LCURLY Fields RCURLY
  79        | INTV
  80        | INERT LSQUARE Type RSQUARE
  81        | FORK LCURLY Term RCURLY
  82        | MUTEX LT UCID GT

  83  Cases : Case
  84        | Case VBAR Cases

  85  Case : LT LCID EQ LCID GT DDARROW AppTerm

  86  Fields :
  87         | NEFields

  88  NEFields : Field
  89           | Field COMMA NEFields

  90  Field : LCID EQ Term
  91        | Term

  92  TyBinder :
  93           | EQ Type

  94  MutexFields : UCID
  95              | UCID COMMA MutexFields

  96  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (96)

	IMPORT  shift 3
	LAMBDA  shift 4
	UNIT  shift 5
	REF  shift 6
	CASE  shift 7
	LET  shift 8
	FIX  shift 9
	LETREC  shift 10
	IF  shift 11
	TRUE  shift 12
	FALSE  shift 13
	TIMESFLOAT  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	INERT  shift 18
	ACQUIRE  shift 19
	FORK  shift 20
	WAIT  shift 21
	MUTEX  shift 22
	UCID  shift 23
	LCID  shift 24
	INTV  shift 25
	FLOATV  shift 26
	STRINGV  shift 27
	BANG  shift 28
	EOF  shift 29
	LCURLY  shift 30
	LPAREN  shift 31
	LT  shift 32
	.  error

	toplevel  goto 33
	Command  goto 34
	Term  goto 35
	AppTerm  goto 36
	PathTerm  goto 37
	AscribeTerm  goto 38
	ATerm  goto 39


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	Command : IMPORT . STRINGV  (3)

	STRINGV  shift 40
	.  error


state 4
	Term : LAMBDA . LCID COLON Type DOT Term  (35)
	Term : LAMBDA . USCORE COLON Type DOT Term  (36)
	Term : LAMBDA . LT MutexFields GT LCID COLON Type DOT Term  (44)
	Term : LAMBDA . LT MutexFields GT USCORE COLON Type DOT Term  (45)

	LCID  shift 41
	LT  shift 42
	USCORE  shift 43
	.  error


state 5
	ATerm : UNIT .  (73)

	.  reduce 73


state 6
	AppTerm : REF . PathTerm  (48)
	AppTerm : REF . LT MutexFields GT PathTerm  (56)

	UNIT  shift 5
	TRUE  shift 12
	FALSE  shift 13
	INERT  shift 18
	FORK  shift 20
	MUTEX  shift 22
	LCID  shift 44
	INTV  shift 25
	FLOATV  shift 26
	STRINGV  shift 27
	LCURLY  shift 30
	LPAREN  shift 31
	LT  shift 45
	.  error

	PathTerm  goto 46
	AscribeTerm  goto 38
	ATerm  goto 39


state 7
	Term : CASE . Term OF Cases  (38)

	LAMBDA  shift 4
	UNIT  shift 5
	REF  shift 6
	CASE  shift 7
	LET  shift 8
	FIX  shift 9
	LETREC  shift 10
	IF  shift 11
	TRUE  shift 12
	FALSE  shift 13
	TIMESFLOAT  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	INERT  shift 18
	ACQUIRE  shift 19
	FORK  shift 20
	WAIT  shift 21
	MUTEX  shift 22
	LCID  shift 44
	INTV  shift 25
	FLOATV  shift 26
	STRINGV  shift 27
	BANG  shift 28
	LCURLY  shift 30
	LPAREN  shift 31
	LT  shift 32
	.  error

	Term  goto 47
	AppTerm  goto 36
	PathTerm  goto 37
	AscribeTerm  goto 38
	ATerm  goto 39


state 8
	Term : LET . LCID EQ Term IN Term  (39)
	Term : LET . USCORE EQ Term IN Term  (40)

	LCID  shift 48
	USCORE  shift 49
	.  error


state 9
	AppTerm : FIX . PathTerm  (50)

	UNIT  shift 5
	TRUE  shift 12
	FALSE  shift 13
	INERT  shift 18
	FORK  shift 20
	MUTEX  shift 22
	LCID  shift 44
	INTV  shift 25
	FLOATV  shift 26
	STRINGV  shift 27
	LCURLY  shift 30
	LPAREN  shift 31
	LT  shift 32
	.  error

	PathTerm  goto 50
	AscribeTerm  goto 38
	ATerm  goto 39


state 10
	Term : LETREC . LCID COLON Type EQ Term IN Term  (41)

	LCID  shift 51
	.  error


state 11
	Term : IF . Term THEN Term ELSE Term  (42)

	LAMBDA  shift 4
	UNIT  shift 5
	REF  shift 6
	CASE  shift 7
	LET  shift 8
	FIX  shift 9
	LETREC  shift 10
	IF  shift 11
	TRUE  shift 12
	FALSE  shift 13
	TIMESFLOAT  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	INERT  shift 18
	ACQUIRE  shift 19
	FORK  shift 20
	WAIT  shift 21
	MUTEX  shift 22
	LCID  shift 44
	INTV  shift 25
	FLOATV  shift 26
	STRINGV  shift 27
	BANG  shift 28
	LCURLY  shift 30
	LPAREN  shift 31
	LT  shift 32
	.  error

	Term  goto 52
	AppTerm  goto 36
	PathTerm  goto 37
	AscribeTerm  goto 38
	ATerm  goto 39


state 12
	ATerm : TRUE .  (75)

	.  reduce 75


state 13
	ATerm : FALSE .  (76)

	.  reduce 76


state 14
	AppTerm : TIMESFLOAT . PathTerm PathTerm  (51)

	UNIT  shift 5
	TRUE  shift 12
	FALSE  shift 13
	INERT  shift 18
	FORK  shift 20
	MUTEX  shift 22
	LCID  shift 44
	INTV  shift 25
	FLOATV  shift 26
	STRINGV  shift 27
	LCURLY  shift 30
	LPAREN  shift 31
	LT  shift 32
	.  error

	PathTerm  goto 53
	AscribeTerm  goto 38
	ATerm  goto 39


state 15
	AppTerm : SUCC . PathTerm  (52)

	UNIT  shift 5
	TRUE  shift 12
	FALSE  shift 13
	INERT  shift 18
	FORK  shift 20
	MUTEX  shift 22
	LCID  shift 44
	INTV  shift 25
	FLOATV  shift 26
	STRINGV  shift 27
	LCURLY  shift 30
	LPAREN  shift 31
	LT  shift 32
	.  error

	PathTerm  goto 54
	AscribeTerm  goto 38
	ATerm  goto 39


state 16
	AppTerm : PRED . PathTerm  (53)

	UNIT  shift 5
	TRUE  shift 12
	FALSE  shift 13
	INERT  shift 18
	FORK  shift 20
	MUTEX  shift 22
	LCID  shift 44
	INTV  shift 25
	FLOATV  shift 26
	STRINGV  shift 27
	LCURLY  shift 30
	LPAREN  shift 31
	LT  shift 32
	.  error

	PathTerm  goto 55
	AscribeTerm  goto 38
	ATerm  goto 39


state 17
	AppTerm : ISZERO . PathTerm  (54)

	UNIT  shift 5
	TRUE  shift 12
	FALSE  shift 13
	INERT  shift 18
	FORK  shift 20
	MUTEX  shift 22
	LCID  shift 44
	INTV  shift 25
	FLOATV  shift 26
	STRINGV  shift 27
	LCURLY  shift 30
	LPAREN  shift 31
	LT  shift 32
	.  error

	PathTerm  goto 56
	AscribeTerm  goto 38
	ATerm  goto 39


state 18
	ATerm : INERT . LSQUARE Type RSQUARE  (80)

	LSQUARE  shift 57
	.  error


state 19
	Term : ACQUIRE . Term IN Term  (43)

	LAMBDA  shift 4
	UNIT  shift 5
	REF  shift 6
	CASE  shift 7
	LET  shift 8
	FIX  shift 9
	LETREC  shift 10
	IF  shift 11
	TRUE  shift 12
	FALSE  shift 13
	TIMESFLOAT  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	INERT  shift 18
	ACQUIRE  shift 19
	FORK  shift 20
	WAIT  shift 21
	MUTEX  shift 22
	LCID  shift 44
	INTV  shift 25
	FLOATV  shift 26
	STRINGV  shift 27
	BANG  shift 28
	LCURLY  shift 30
	LPAREN  shift 31
	LT  shift 32
	.  error

	Term  goto 58
	AppTerm  goto 36
	PathTerm  goto 37
	AscribeTerm  goto 38
	ATerm  goto 39


state 20
	ATerm : FORK . LCURLY Term RCURLY  (81)

	LCURLY  shift 59
	.  error


state 21
	AppTerm : WAIT . PathTerm  (55)

	UNIT  shift 5
	TRUE  shift 12
	FALSE  shift 13
	INERT  shift 18
	FORK  shift 20
	MUTEX  shift 22
	LCID  shift 44
	INTV  shift 25
	FLOATV  shift 26
	STRINGV  shift 27
	LCURLY  shift 30
	LPAREN  shift 31
	LT  shift 32
	.  error

	PathTerm  goto 60
	AscribeTerm  goto 38
	ATerm  goto 39


state 22
	ATerm : MUTEX . LT UCID GT  (82)

	LT  shift 61
	.  error


state 23
	Command : UCID . TyBinder  (6)
	TyBinder : .  (92)

	EQ  shift 62
	SEMI  reduce 92

	TyBinder  goto 63


state 24
	Command : LCID . Binder  (5)
	ATerm : LCID .  (71)

	COLON  shift 64
	EQ  shift 65
	AS  reduce 71
	UNIT  reduce 71
	TRUE  reduce 71
	FALSE  reduce 71
	INERT  reduce 71
	FORK  reduce 71
	MUTEX  reduce 71
	LCID  reduce 71
	INTV  reduce 71
	FLOATV  reduce 71
	STRINGV  reduce 71
	COLONEQ  reduce 71
	DOT  reduce 71
	LCURLY  reduce 71
	LPAREN  reduce 71
	LT  reduce 71
	SEMI  reduce 71

	Binder  goto 66


state 25
	ATerm : INTV .  (79)

	.  reduce 79


state 26
	ATerm : FLOATV .  (77)

	.  reduce 77


state 27
	ATerm : STRINGV .  (72)

	.  reduce 72


state 28
	AppTerm : BANG . PathTerm  (49)

	UNIT  shift 5
	TRUE  shift 12
	FALSE  shift 13
	INERT  shift 18
	FORK  shift 20
	MUTEX  shift 22
	LCID  shift 44
	INTV  shift 25
	FLOATV  shift 26
	STRINGV  shift 27
	LCURLY  shift 30
	LPAREN  shift 31
	LT  shift 32
	.  error

	PathTerm  goto 67
	AscribeTerm  goto 38
	ATerm  goto 39


state 29
	toplevel : EOF .  (1)

	.  reduce 1


state 30
	ATerm : LCURLY . Fields RCURLY  (78)
	Fields : .  (86)

	LAMBDA  shift 4
	UNIT  shift 5
	REF  shift 6
	CASE  shift 7
	LET  shift 8
	FIX  shift 9
	LETREC  shift 10
	IF  shift 11
	TRUE  shift 12
	FALSE  shift 13
	TIMESFLOAT  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	INERT  shift 18
	ACQUIRE  shift 19
	FORK  shift 20
	WAIT  shift 21
	MUTEX  shift 22
	LCID  shift 68
	INTV  shift 25
	FLOATV  shift 26
	STRINGV  shift 27
	BANG  shift 28
	LCURLY  shift 30
	LPAREN  shift 31
	LT  shift 32
	RCURLY  reduce 86

	Term  goto 69
	AppTerm  goto 36
	PathTerm  goto 37
	AscribeTerm  goto 38
	ATerm  goto 39
	Fields  goto 70
	NEFields  goto 71
	Field  goto 72


state 31
	ATerm : LPAREN . TermSeq RPAREN  (70)

	LAMBDA  shift 4
	UNIT  shift 5
	REF  shift 6
	CASE  shift 7
	LET  shift 8
	FIX  shift 9
	LETREC  shift 10
	IF  shift 11
	TRUE  shift 12
	FALSE  shift 13
	TIMESFLOAT  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	INERT  shift 18
	ACQUIRE  shift 19
	FORK  shift 20
	WAIT  shift 21
	MUTEX  shift 22
	LCID  shift 44
	INTV  shift 25
	FLOATV  shift 26
	STRINGV  shift 27
	BANG  shift 28
	LCURLY  shift 30
	LPAREN  shift 31
	LT  shift 32
	.  error

	Term  goto 73
	AppTerm  goto 36
	PathTerm  goto 37
	AscribeTerm  goto 38
	ATerm  goto 39
	TermSeq  goto 74


state 32
	ATerm : LT . LCID EQ Term GT AS Type  (74)

	LCID  shift 75
	.  error


state 33
	%entry% : '\001' toplevel .  (96)

	.  reduce 96


state 34
	toplevel : Command . SEMI toplevel  (2)

	SEMI  shift 76
	.  error


state 35
	Command : Term .  (4)

	.  reduce 4


state 36
	Term : AppTerm .  (34)
	Term : AppTerm . COLONEQ AppTerm  (37)
	AppTerm : AppTerm . PathTerm  (47)

	UNIT  shift 5
	TRUE  shift 12
	FALSE  shift 13
	INERT  shift 18
	FORK  shift 20
	MUTEX  shift 22
	LCID  shift 44
	INTV  shift 25
	FLOATV  shift 26
	STRINGV  shift 27
	COLONEQ  shift 77
	LCURLY  shift 30
	LPAREN  shift 31
	LT  shift 32
	OF  reduce 34
	IN  reduce 34
	THEN  reduce 34
	ELSE  reduce 34
	COMMA  reduce 34
	GT  reduce 34
	RCURLY  reduce 34
	RPAREN  reduce 34
	SEMI  reduce 34

	PathTerm  goto 78
	AscribeTerm  goto 38
	ATerm  goto 39


state 37
	AppTerm : PathTerm .  (46)
	PathTerm : PathTerm . DOT LCID  (65)
	PathTerm : PathTerm . DOT INTV  (66)

	DOT  shift 79
	UNIT  reduce 46
	OF  reduce 46
	IN  reduce 46
	THEN  reduce 46
	ELSE  reduce 46
	TRUE  reduce 46
	FALSE  reduce 46
	INERT  reduce 46
	FORK  reduce 46
	MUTEX  reduce 46
	LCID  reduce 46
	INTV  reduce 46
	FLOATV  reduce 46
	STRINGV  reduce 46
	COLONEQ  reduce 46
	COMMA  reduce 46
	GT  reduce 46
	LCURLY  reduce 46
	LPAREN  reduce 46
	LT  reduce 46
	RCURLY  reduce 46
	RPAREN  reduce 46
	SEMI  reduce 46
	VBAR  reduce 46


state 38
	PathTerm : AscribeTerm .  (67)

	.  reduce 67


state 39
	AscribeTerm : ATerm . AS Type  (57)
	AscribeTerm : ATerm .  (58)

	AS  shift 80
	UNIT  reduce 58
	OF  reduce 58
	IN  reduce 58
	THEN  reduce 58
	ELSE  reduce 58
	TRUE  reduce 58
	FALSE  reduce 58
	INERT  reduce 58
	FORK  reduce 58
	MUTEX  reduce 58
	LCID  reduce 58
	INTV  reduce 58
	FLOATV  reduce 58
	STRINGV  reduce 58
	COLONEQ  reduce 58
	COMMA  reduce 58
	DOT  reduce 58
	GT  reduce 58
	LCURLY  reduce 58
	LPAREN  reduce 58
	LT  reduce 58
	RCURLY  reduce 58
	RPAREN  reduce 58
	SEMI  reduce 58
	VBAR  reduce 58


state 40
	Command : IMPORT STRINGV .  (3)

	.  reduce 3


state 41
	Term : LAMBDA LCID . COLON Type DOT Term  (35)

	COLON  shift 81
	.  error


state 42
	Term : LAMBDA LT . MutexFields GT LCID COLON Type DOT Term  (44)
	Term : LAMBDA LT . MutexFields GT USCORE COLON Type DOT Term  (45)

	UCID  shift 82
	.  error

	MutexFields  goto 83


state 43
	Term : LAMBDA USCORE . COLON Type DOT Term  (36)

	COLON  shift 84
	.  error


state 44
	ATerm : LCID .  (71)

	.  reduce 71


state 45
	AppTerm : REF LT . MutexFields GT PathTerm  (56)
	ATerm : LT . LCID EQ Term GT AS Type  (74)

	UCID  shift 82
	LCID  shift 75
	.  error

	MutexFields  goto 85


state 46
	AppTerm : REF PathTerm .  (48)
	PathTerm : PathTerm . DOT LCID  (65)
	PathTerm : PathTerm . DOT INTV  (66)
